Compiler/src/main/java/Testing/Tests/LexicalTests/Fail/InvalidStruct3.ru
/? id de struct invalido, contiene ñ
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/?| Linea 5 | COLUMNA 5 | ERROR SIMBOLO NO VALIDO: EL SIMBOLO DEFINIDO NO ES PARTE DEL ALFABETO ñ

Bebeñ